<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:src="@tools:sample/avatars"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/heroes_name"
        style="@style/TextStyleTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:paddingTop="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/desc"/>

    <LinearLayout
        android:layout_marginVertical="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_password"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:scaleX="-1"
                android:src="@drawable/ic_lock_black" />

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                style="@style/TextContent" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_mail"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:scaleX="-1"
                android:src="@drawable/ic_mail_black" />

            <TextView
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                style="@style/TextContent" />
        </LinearLayout>
        <LinearLayout
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_about"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:scaleX="-1"
            android:src="@drawable/ic_info_black" />

        <TextView
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            style="@style/TextContent" />
        </LinearLayout>
        <LinearLayout
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:scaleX="-1"
            android:src="@drawable/ic_logout" />

        <TextView
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            style="@style/TextContent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
