<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_background"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_noRm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Nomor"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nama"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_tanggalmasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/tgl"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>


        <ImageView
            android:contentDescription="@string/desc"
            android:id="@+id/img_kursor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_arrow_back"
            android:scaleX="-1"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>