<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cs_search">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_query"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_search_black" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        style="@style/TextStyleTitle"
        android:layout_below="@+id/cs_search"/>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_below="@+id/tv_welcome"
        android:id="@+id/cs_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/todo"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_user_name"
            android:fontFamily="@font/poppinsmedium"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/heroes_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_widget"
        android:layout_below="@id/cs_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/data_dokter"/>

    <LinearLayout
        android:layout_below="@+id/img_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_widget">

            <View
                android:id="@+id/btnShape_pasien"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/shadow_background"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/desc"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hasil Jumlah Pasien"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvJumlahPasien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_widget">

            <View
                android:id="@+id/btnShape_dokter"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/shadow_background"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/desc"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hasil Jumlah Dokter"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/tvJumlahDokter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>


</RelativeLayout>